# Sorting-Algorithm-Race

./: CMakeLists.txt  LICENSE  README.md
include/: algorithm.hpp  dataset.hpp  list.hpp  sorts.hpp
include/sorts/: bubble.hpp  bucket.hpp  cocktailshaker.hpp  comb.hpp  counting.hpp  gnome.hpp  heap.hpp  insertion.hpp  intro.hpp  merge.hpp  oddeven.hpp  quick.hpp  radix.hpp  selection.hpp  shell.hpp  tim.hpp  verify.hpp
src/: algorithm.cpp  dataset.cpp  list.cpp  main.cpp
src/sorts/: bubble.cpp  bucket.cpp  cocktailshaker.cpp  comb.cpp  counting.cpp  gnome.cpp  heap.cpp  insertion.cpp  intro.cpp  merge.cpp  oddeven.cpp  quick.cpp  radix.cpp  selection.cpp  shell.cpp  tim.cpp  verify.cpp
